<resources>

    <string name="pub_app">ca-app-pub-3914566327746823~3262581101</string>
    <string name="pub_bloco">ca-app-pub-3940256099942544/6300978111</string>
    <!--<string name="pub_bloco">ca-app-pub-3914566327746823/2564453396</string>-->

    <string name="app_name">Alarme Bitcoin</string>

    <string name="Minute">Minuto</string>
    <string name="Hour">Hora</string>

    <string name="Notification">Notificação</string>

    <string name="Notifications">Notificações</string>
    <string name="Add">Adicionar</string>
    <string name="Config">Configurações</string>

    <!--formulario add-->
    <string name="Title">Nova Notificação</string>
    <string name="TValue">Valor de trading:</string>
    <string name="Condition">Condição:</string>
        <string name="Condition1">Maior que</string>
        <string name="Condition2">Menor que</string>
    <string name="Provider">Provedor:</string>
    <string name="verTime">Tempo de verificação:</string>
    <string name="notType">Tipo de notificação:</string>
        <string name="Simple">Notificação Simples</string>
        <string name="Sound">Notificação Sonora</string>
        <string name="Loud">Notificação Alta</string>
        <string name="Ringer">Notificação Persistente</string>
        <string name="formButton">Adicionar Notificação</string>
</resources>
