<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ragabuza.bitcoinmonitor.AlarmActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
            android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/TValue"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"/>
    <EditText
        android:id="@+id/etValue"
        android:layout_width="0dp"
        android:layout_weight="16"
        android:digits="0123456789."
        android:inputType="phone"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"/>
            <ImageButton
                android:id="@+id/btPutValue"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@color/colorPrimaryDark"
                android:src="@drawable/bitcoin_sign" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/Condition"/>
            <Spinner
                android:id="@+id/spCondition"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/Provider"/>
            <Spinner
                android:id="@+id/spProvider"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/notType"/>
            <Spinner
                android:id="@+id/spNotifyType"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"/>
        </LinearLayout>



        <Button
            android:layout_marginTop="8dp"
            android:id="@+id/btAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/formButton"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"/>

        <Button
            android:layout_marginTop="8dp"
            android:id="@+id/btCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cancelar"
            android:textColor="@android:color/white"
            android:background="@color/colorNegative"/>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        ads:layout_constraintBottom_toBottomOf="parent"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adViewAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/pub_bloco">
    </com.google.android.gms.ads.AdView>

</android.support.constraint.ConstraintLayout>
