<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <ScrollView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">
    <TextView
        android:drawableLeft="@drawable/ic_empty"
        android:drawablePadding="12dp"
        android:layout_marginVertical="6dp"
        android:textSize="10pt"
        android:id="@+id/FOX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/FOXLine"
        android:background="#666666"
        android:visibility="gone"/>
    <TextView
        android:drawableLeft="@drawable/ic_empty"
        android:drawablePadding="12dp"
        android:layout_marginVertical="6dp"
        android:textSize="10pt"
        android:id="@+id/MBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/MBTLine"
            android:background="#666666"
            android:visibility="gone"/>
    <TextView
        android:drawableLeft="@drawable/ic_empty"
        android:drawablePadding="12dp"
        android:layout_marginVertical="6dp"
        android:textSize="10pt"
        android:id="@+id/NEG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/NEGLine"
            android:background="#666666"
            android:visibility="gone"/>
    <TextView
        android:drawableLeft="@drawable/ic_empty"
        android:drawablePadding="12dp"
        android:layout_marginVertical="6dp"
        android:textSize="10pt"
        android:id="@+id/B2U"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/B2ULine"
            android:background="#666666"
            android:visibility="gone"/>
    <TextView
        android:drawableLeft="@drawable/ic_empty"
        android:drawablePadding="12dp"
        android:layout_marginVertical="6dp"
        android:textSize="10pt"
        android:id="@+id/BTD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/BTDLine"
            android:background="#666666"
            android:visibility="gone"/>
    <TextView
        android:drawableLeft="@drawable/ic_empty"
        android:drawablePadding="12dp"
        android:layout_marginVertical="6dp"
        android:textSize="10pt"
        android:id="@+id/FLW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/FLWLine"
            android:background="#666666"
            android:visibility="gone"/>
    <TextView
        android:drawableLeft="@drawable/ic_empty"
        android:drawablePadding="12dp"
        android:layout_marginVertical="6dp"
        android:textSize="10pt"
        android:id="@+id/ARN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/ARNLine"
            android:background="#666666"
            android:visibility="gone"/>
    </LinearLayout>
    </ScrollView>
    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <com.google.android.gms.ads.AdView
        android:layout_marginBottom="8dp"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adViewTrends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/pub_bloco">
    </com.google.android.gms.ads.AdView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_vertical">
        <Button
            android:id="@+id/btTrends"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Trends"
            android:textSize="5pt"
            android:textColor="@color/colorPrimaryDarker"
            android:drawableTint="@color/colorPrimaryDarker"
            android:drawableTop="@drawable/ic_trending_up"
            android:background="@null"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            />
        <Button
            android:id="@+id/btNotifications"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/Notifications"
            android:textSize="5pt"
            android:textColor="@android:color/white"
            android:drawableTint="@android:color/white"
            android:drawableTop="@drawable/ic_format_list_bulleted"
            android:background="@null"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            />
        <Button
            android:id="@+id/btNew"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/Add"
            android:textSize="5pt"
            android:textColor="@android:color/white"
            android:drawableTint="@android:color/white"
            android:drawableTop="@drawable/ic_add"
            android:background="@null"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            />
        <Button
            android:id="@+id/btConfig"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/Config"
            android:textSize="5pt"
            android:textColor="@android:color/white"
            android:drawableTint="@android:color/white"
            android:drawableTop="@drawable/ic_settings"
            android:background="@null"/>
    </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>